src/main/resources/prometheus/prometheus-k8s/alertmanager/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  rules:
    - host: alertmanager-lml.izaodao.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
